--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
-    "name" : "jquery.shorten",
-    "description" : "jQuery plugin to automatically shorten text in a DIV and add 'show more' link.",
-    "homepage" : "http://viralpatel.net",
-    "version" : "1.1.0",
-    "contributors" : [],
-    "repository" : {
-        "type" : "git",
-        "url" : "https://github.com/derFreitag/jquery.shorten.git"
-    },
-    "bugs" : "https://github.com/derFreitag/jquery.shorten/issues",
-    "main": "src/jquery.shorten.js",
-    "dependencies": {
-	"jquery": "^1.4.2"
-    }
+  "name": "jquery.shorten",
+  "version": "1.0.0",
+  "description": "A simple jquery plugin that automatically shortens text within an element and add more link.",
+  "main": "index.js",
+  "dependencies": {},
+  "devDependencies": {
+    "uglify-js": "latest"
+  },
+  "scripts": {
+    "minify": "uglifyjs src/jquery.shorten.js > src/jquery.shorten.min.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/viralpatel/jquery.shorten.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/viralpatel/jquery.shorten/issues"
+  },
+  "homepage": "https://github.com/viralpatel/jquery.shorten#readme"
 }
